--- a/index.html
+++ b/index.html
@@ -21,42 +21,38 @@
                 <h2 class="add">+ Add Book</h2>
             </button>
         </div>
-        <div class="popup-container">
-            <div class="popup" id="popup">
-                <div>
-                    <label for="book">Book Name</label>
-                    <input type="text" class="book">
+        <form action="#" class="form">
+            <div class="popup-container">
+                <div class="popup" id="popup">
+                    <div>
+                        <label for="book">Book Name</label>
+                        <input type="text" class="book" id="book" required>
+                    </div>
+                    <div>
+                        <label for="author">Author Name</label>
+                        <input type="text" class="author" required>
+                    </div>
+                    <div>
+                        <label for="page-input" class="page">Page</label>
+                        <input type="number" min="0" value='0' class="page-input">
+                    </div>
+                    <div class="radio-buttons">
+                        <label for="read" class="read">
+                            <input type="radio" name="radiobuttons" class="radiobutton" value="read" checked>
+                            Read
+                        </label>
+                        <label for="unread" class="unread">
+                            <input type="radio" name="radiobuttons" class="radiobutton" value="unread">
+                            Unread
+                        </label>
+                    </div>
+                    <button type="submit" class="done">Done</button>
                 </div>
-                <div>
-                    <label for="author">Author Name</label>
-                    <input type="text" class="author">
-                </div>
-                <div>
-                    <label for="page">Page</label>
-                    <input type="number" min="1" value="1" class="page">
-                </div>
-                <div>
-                    <label for="read">Read Or unread</label>
-                    <input type="text" class="read">
-                </div>
-                <button class="Done">Done</button>
-            </div>
+        </form>
         </div>
         <div class="grid-container">
-            <div class="card">
-                <h3 class="book-name" name="book">yugi oh</h3>
-                <h3 class="book-author" name="author">yasuo</h3>
-                <div><input class="book-page" type="number" min="1" value="1" name="page">pages</input></div>
-                <button class="status">
-                    <h3>Not Read</h3>
-                </button>
-                <button class="remove">
-                    <h3>Remove</h3>
-                </button>
-            </div>
         </div>
     </main>
-
 
     <script src="/app.js"></script>
 </body>
