--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
         <div class="grid-container">
         </div>
     </main>
-
-    <script src="/app.js"></script>
 </body>
+<script src="app.js"></script>
 
 </html>
